Add full example

--- a/readme.org
+++ b/readme.org
@@ -274,3 +274,51 @@ A few useful top-level-selectors are provided by =top-level-selectors.rkt=, incl
 - =select-define-body= selects the body of top level =define= forms
 - ... and more
 
+* A complete-ish example
+To define a mutation engine that does two things:
+- swap the branches of if's
+- negate all numeric constants
+  
+The same code is also in =full-example.rkt=.
+
+#+BEGIN_SRC racket
+#lang racket
+
+(require "mutator-lib.rkt"
+         "mutate-expr.rkt"
+         "mutate-program.rkt"
+         syntax/parse)
+
+(define-simple-mutator (if-swap stx)
+  #:pattern ({~literal if} cond t e)
+  #'(if cond e t))
+
+(define-value-mutator constant-swap #:type "constant-swap" #:bind-value v
+  [(? number?) #:-> (- v)])
+
+(define active-mutators (list if-swap
+                              constant-swap))
+
+(define combined-active-mutators (apply compose-mutators active-mutators))
+(define mutate-expr (make-expr-mutator combined-active-mutators))
+(define mutate-program (make-program-mutator mutate-expr))
+(define mutate-program-syntax (syntax-only mutate-program))
+
+(define program-to-mutate #'{(require "a.rkt")
+                             (define x (if (yes?) 0 42))
+                             (define y (if (negative? x)
+                                           "negative!"
+                                           (if (zero? x)
+                                               "zero!"
+                                               "positive!")))
+                             (displayln y)})
+(with-handlers ([mutation-index-exception? (λ _ (displayln 'done!))])
+  (for ([i (in-naturals)])
+    (displayln (list i (syntax->datum (mutate-program-syntax program-to-mutate i))))))
+; =>
+;; (0 ((require a.rkt) (define x (if (yes?) 42 0)) (define y (if (negative? x) negative! (if (zero? x) zero! positive!))) (displayln y)))
+;; (1 ((require a.rkt) (define x (if (yes?) 0 -42)) (define y (if (negative? x) negative! (if (zero? x) zero! positive!))) (displayln y)))
+;; (2 ((require a.rkt) (define x (if (yes?) 0 42)) (define y (if (negative? x) (if (zero? x) zero! positive!) negative!)) (displayln y)))
+;; (3 ((require a.rkt) (define x (if (yes?) 0 42)) (define y (if (negative? x) negative! (if (zero? x) positive! zero!))) (displayln y)))
+;; done!
+#+END_SRC
