--- a/readme.org
+++ b/readme.org
@@ -5,9 +5,13 @@ A mutation framework for s-expression languages.
 See the documentation for a full overview, and the example below for a teaser.
 
 * Installation
-: raco pkg install https://github.com/LLazarek/mutate
+: raco pkg install mutate
 
 * Docs
+https://docs.racket-lang.org/mutate/index.html
+
+or, once installed,
+
 : raco docs mutate
 
 * An example
